// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders with subtitle 1`] = `
<header
  className="header"
>
  <img
    alt="alt"
    src="src"
  />
  <div
    className="header__content"
  >
    <div
      className="container"
    >
      <div
        className="header__contentInner"
      >
        <h1
          className="display-1"
        >
          title
        </h1>
        <p
          className="lead"
        >
          subtitle
        </p>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders without subtitle 1`] = `
<header
  className="header"
>
  <img
    alt="alt"
    src="src"
  />
  <div
    className="header__content"
  >
    <div
      className="container"
    >
      <div
        className="header__contentInner"
      >
        <h1
          className="display-1"
        >
          title
        </h1>
      </div>
    </div>
  </div>
</header>
`;
